# pico-sample

./: CMakeLists.txt  LICENSE  README.md  blink.c  run_on_target.sh  start_dev_container.sh
.devcontainer/: devcontainer.json
